objects/Baggage_Detail__c.object
<CustomObject>
    <fields>
        <fullName>BIR_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BIR Sent ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BIR_Type__c</fullName>
        <label>BIR Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AHL</fullName>
                </value>
                <value>
                    <fullName>DPR</fullName>
                </value>
                <value>
                    <fullName>OHD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Baggage_Color__c</fullName>
        <label>Baggage Color</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BE – Beige / Cream / Ivory</fullName>
                </value>
                <value>
                    <fullName>BK – Black</fullName>
                </value>
                <value>
                    <fullName>BN – Brown / Tan / Taupe / Bronze / Copper</fullName>
                </value>
                <value>
                    <fullName>BU – Blue / Turquoise</fullName>
                </value>
                <value>
                    <fullName>GN – Green / Olive / Jade</fullName>
                </value>
                <value>
                    <fullName>GY – Grey / Silver / Aluminum</fullName>
                </value>
                <value>
                    <fullName>MC – Two or more solid colors, excluding trim</fullName>
                </value>
                <value>
                    <fullName>PR – Print / Pattern / Floral / Spotted / Tapestry / Stripe / Plaid</fullName>
                </value>
                <value>
                    <fullName>PU – Purple / Violet / Lilac</fullName>
                </value>
                <value>
                    <fullName>RD – Red / Maroon / Pink / Mauve / Burgundy</fullName>
                </value>
                <value>
                    <fullName>WT – White / Clear</fullName>
                </value>
                <value>
                    <fullName>YW – Yellow / Orange / Gold</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Baggage_Tag__c</fullName>
        <label>Baggage Tag #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Baggage_Type__c</fullName>
        <label>Baggage Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Backpack/Rucksack</fullName>
                </value>
                <value>
                    <fullName>Box</fullName>
                </value>
                <value>
                    <fullName>Briefcase</fullName>
                </value>
                <value>
                    <fullName>Document Case</fullName>
                </value>
                <value>
                    <fullName>Duffle/Sport Bag</fullName>
                </value>
                <value>
                    <fullName>Expandable upright</fullName>
                </value>
                <value>
                    <fullName>Garment Bag/Suit Carrier</fullName>
                </value>
                <value>
                    <fullName>Horizontal design Hard Shell</fullName>
                </value>
                <value>
                    <fullName>Horizontal design suitcase</fullName>
                </value>
                <value>
                    <fullName>Horizontal design suitcase - Expandable</fullName>
                </value>
                <value>
                    <fullName>Horizontal design suitcase – Non-expandable</fullName>
                </value>
                <value>
                    <fullName>Lap Top/Overnight bag</fullName>
                </value>
                <value>
                    <fullName>Matted woven bag</fullName>
                </value>
                <value>
                    <fullName>Military Style Bag</fullName>
                </value>
                <value>
                    <fullName>Plastic/Laundry Bag</fullName>
                </value>
                <value>
                    <fullName>Storage Container</fullName>
                </value>
                <value>
                    <fullName>Upright design</fullName>
                </value>
                <value>
                    <fullName>Upright design, combined hard and soft material</fullName>
                </value>
                <value>
                    <fullName>Upright design, hard material</fullName>
                </value>
                <value>
                    <fullName>Upright design, Soft material</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Brand_name_of_Suitcase__c</fullName>
        <label>Brand name of Baggage</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_No__c</fullName>
        <label>Case No.</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Baggage Details</relationshipLabel>
        <relationshipName>Baggage_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contents__c</fullName>
        <inlineHelpText>4 distinctive items</inlineHelpText>
        <label>Contents</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Destination_on_Baggage_tag__c</fullName>
        <label>Destination on Baggage tag</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agartala (IXA)</fullName>
                </value>
                <value>
                    <fullName>Ahmedabad (AMD)</fullName>
                </value>
                <value>
                    <fullName>Aizawl (AJL)</fullName>
                </value>
                <value>
                    <fullName>Amritsar (ATQ)</fullName>
                </value>
                <value>
                    <fullName>Bagdogra (IXB)</fullName>
                </value>
                <value>
                    <fullName>Bangkok (BKK)</fullName>
                </value>
                <value>
                    <fullName>Belgaum (IXG)</fullName>
                </value>
                <value>
                    <fullName>Bengaluru (BLR)</fullName>
                </value>
                <value>
                    <fullName>Chandigarh (IXC)</fullName>
                </value>
                <value>
                    <fullName>Chennai (MAA)</fullName>
                </value>
                <value>
                    <fullName>Coimbatore (CJB)</fullName>
                </value>
                <value>
                    <fullName>Colombo (CMB)</fullName>
                </value>
                <value>
                    <fullName>Dehradun (DED)</fullName>
                </value>
                <value>
                    <fullName>Delhi (DEL)</fullName>
                </value>
                <value>
                    <fullName>Dharamshala (DHM)</fullName>
                </value>
                <value>
                    <fullName>Dubai (DXB)</fullName>
                </value>
                <value>
                    <fullName>Goa (GOI)</fullName>
                </value>
                <value>
                    <fullName>Gorakhpur (GOP)</fullName>
                </value>
                <value>
                    <fullName>Guwahati (GAU)</fullName>
                </value>
                <value>
                    <fullName>Hyderabad (HYD)</fullName>
                </value>
                <value>
                    <fullName>Jabalpur (JLR)</fullName>
                </value>
                <value>
                    <fullName>Jaipur (JAI)</fullName>
                </value>
                <value>
                    <fullName>Jammu (IXJ)</fullName>
                </value>
                <value>
                    <fullName>Kabul (KBL)</fullName>
                </value>
                <value>
                    <fullName>Kochi (COK)</fullName>
                </value>
                <value>
                    <fullName>Kolkata (CCU)</fullName>
                </value>
                <value>
                    <fullName>Kozhikode (CCJ)</fullName>
                </value>
                <value>
                    <fullName>Madurai (IXM)</fullName>
                </value>
                <value>
                    <fullName>Male (MLE)</fullName>
                </value>
                <value>
                    <fullName>Mangalore (IXE)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Baggage_Color__c</fullName>
        <label>Other Baggage Color</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Baggage_Type__c</fullName>
        <label>Other Baggage Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Damage__c</fullName>
        <label>Type of Damage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>BIR_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Back</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Front</fullName>
                </value>
                <value>
                    <fullName>Major</fullName>
                </value>
                <value>
                    <fullName>Minor</fullName>
                </value>
                <value>
                    <fullName>Sides</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weight_of_Missing_Baggage__c</fullName>
        <inlineHelpText>In Kg</inlineHelpText>
        <label>Weight of Missing Baggage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Baggage Detail</label>
    <nameField>
        <displayFormat>BD-{00000}</displayFormat>
        <label>Record No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Baggage Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Contents_is_mandatory</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    OR(
        TEXT(BIR_Type__c) == &apos;AHL&apos;,
        TEXT(BIR_Type__c) == &apos;DPR&apos;
    ),
    ISBLANK(Contents__c)
)</errorConditionFormula>
        <errorDisplayField>Contents__c</errorDisplayField>
        <errorMessage>Contents is mandatory</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Baggage_Color_is_mandatory</fullName>
        <active>true</active>
        <description>Other Baggage Color is mandatory if Baggage Color is Others</description>
        <errorConditionFormula>AND(
    TEXT( Baggage_Color__c ) == &apos;Other&apos;,
    ISBLANK( Other_Baggage_Color__c )
)</errorConditionFormula>
        <errorDisplayField>Other_Baggage_Color__c</errorDisplayField>
        <errorMessage>Other Baggage Color  is mandatory if Baggage Color is others</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Baggage_Type_is_mandatory</fullName>
        <active>true</active>
        <description>Other Baggage Type is mandatory if Baggage type is Others</description>
        <errorConditionFormula>AND(
    TEXT( Baggage_Type__c ) == &apos;Other&apos;,
    ISBLANK( Other_Baggage_Type__c )
)</errorConditionFormula>
        <errorDisplayField>Other_Baggage_Type__c</errorDisplayField>
        <errorMessage>Other Baggage Type is mandatory if Baggage Type is others</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Total_Baggage_Weight_vs_Missing_Weight</fullName>
        <active>false</active>
        <description>Weight of Missing Baggage cannot be more than the Total Baggage Weight.</description>
        <errorConditionFormula>Case_No__r.Total_Baggage_Weight__c &lt; Case_No__r.Total_Weight_of_Missing_Baggage__c</errorConditionFormula>
        <errorMessage>Weight of all the Missing Baggage cannot be more than the Total Baggage Weight.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Total_Pieces_vs_Missing_Pieces</fullName>
        <active>false</active>
        <description>Pieces of Missing Baggage cannot be more than Total Pieces Checked In.</description>
        <errorConditionFormula>Case_No__r.Total_Pieces_Checked_In__c &lt;  Case_No__r.Number_of_Missing_Baggage__c</errorConditionFormula>
        <errorMessage>Pieces of all Missing Baggage cannot be more than the Total Pieces Checked In.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Weight_should_be_same</fullName>
        <active>false</active>
        <description>Weight of Missing Baggage should be same as Total baggage if same no. of pieces are missing.</description>
        <errorConditionFormula>Case_No__r.Number_of_Missing_Baggage__c == Case_No__r.Total_Pieces_Checked_In__c &amp;&amp; Case_No__r.Total_Baggage_Weight__c &lt;&gt;  Case_No__r.Total_Weight_of_Missing_Baggage__c</errorConditionFormula>
        <errorMessage>Weight of all the Missing Baggage must be same as Total Baggage Weight if the no. of missing pieces is same as the total checked In pieces.</errorMessage>
    </validationRules>
</CustomObject>